Create clean extension-only repository
REMOVED:
- memory-bank/ directory (development tracking only, not needed in repo)
- src/assets/icons/README.md (unnecessary documentation)
- Development status section from README.md

UPDATED:
- README.md: Simplified to focus on user information only
- .gitignore: Added memory-bank/ to prevent future inclusion

RESULT:
- Repository now contains only essential extension files
- Clean professional structure for Chrome extension
- src/ directory ready for icon files and extension loading

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # SeekSpeak - Chrome Extension Repository
 
 # Development files (keep local only)
+memory-bank/
 TESTING.md
 CANVA_DESIGN_BRIEF.md
 ICON_PLACEHOLDER.md
