Fix script loading order issue - caption fetcher not available
PROBLEM IDENTIFIED:
- youtube-injector.js was loading before caption-fetcher.js
- Resulted in "Caption fetcher not available" error
- Scripts were trying to use components before they were created

SOLUTION IMPLEMENTED:
- Changed manifest.json script loading order:
  1. caption-fetcher.js (creates window.captionFetcher)
  2. search-engine.js (creates window.searchEngine)  
  3. ui-controller.js (creates window.uiController)
  4. youtube-injector.js (uses all components) - loads LAST

SAFETY IMPROVEMENTS:
- Added waitForComponents() function in youtube-injector
- Waits up to 5 seconds for all components to load
- Provides detailed logging about component availability
- Graceful handling if components fail to load

EXPECTED RESULT:
- Extension should now properly initialize all components
- Caption fetching should work correctly
- "Caption fetcher not available" error should be resolved

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,10 +20,10 @@
         "https://m.youtube.com/watch*"
       ],
       "js": [
-        "content/youtube-injector.js",
-        "content/caption-fetcher.js", 
-        "content/search-engine.js",
-        "content/ui-controller.js"
+        "content/caption-fetcher.js",
+        "content/search-engine.js", 
+        "content/ui-controller.js",
+        "content/youtube-injector.js"
       ],
       "css": [
         "content/seekspeak.css"
