--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,7 +18,9 @@
     {
       "matches": [
         "https://www.youtube.com/watch*",
-        "https://m.youtube.com/watch*"
+        "https://m.youtube.com/watch*",
+        "https://www.youtube.com/*",
+        "https://youtube.com/watch*"
       ],
       "js": [
         "content/caption-fetcher.js",
@@ -29,7 +31,8 @@
       "css": [
         "content/seekspeak.css"
       ],
-      "run_at": "document_idle"
+      "run_at": "document_idle",
+      "all_frames": false
     }
   ],
   
