Implement custom loading UI and SeekSpeak transcript button
MAJOR UX IMPROVEMENTS:
- Created professional custom loading overlay with SeekSpeak branding
- Replaces transcript flash with "Storing Captions..." + logo + spinner
- Added SeekSpeak "Search Captions" button next to YouTube's transcript button
- Enhanced fetchCaptions() with progress updates and better error handling
- Modified youtube-injector.js to initialize custom UI components
- Updated manifest.json to include custom-ui.js component

FEATURES:
✅ Custom Loading UI:
  - Professional SeekSpeak branding (red gradient, logo, spinner)
  - Progress messages during extraction ("Trying YouTube Internal Data...")
  - Smooth fade in/out animations
  - Mobile responsive design

✅ SeekSpeak Transcript Button:
  - Adds red "Search Captions" button next to YouTube's "Show transcript"
  - Opens SeekSpeak search interface directly
  - Handles caption loading if not already cached
  - Professional styling with hover effects

✅ Enhanced Caption Fetching:
  - Real-time progress updates during extraction
  - Better error handling and fallback options
  - Automatic caching of successful results
  - Custom UI method for transcript panel access

This completely solves the transcript flash issue by replacing it with a
professional branded experience, while also providing users direct access
to SeekSpeak functionality. Ready for Chrome Web Store submission.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,7 @@
         "https://youtube.com/watch*"
       ],
       "js": [
+        "content/custom-ui.js",
         "content/caption-fetcher.js",
         "content/search-engine.js", 
         "content/ui-controller.js",
