🚀 Major UX Enhancement: Toggle, Logo, Footer Fix & Flash Elimination
✅ SEARCH BUTTON IMPROVEMENTS:
- Fixed method call: openSearchOverlay() → showSearchOverlay() 
- Added toggle functionality: click to open, click again to close
- Integrated SeekSpeak logo replacing emoji for professional branding
- Updated tooltip: "Open SeekSpeak caption search (click again to close)"

✅ INTERFACE LAYOUT FIXES:
- Moved footer to bottom of search interface using enhanced flex layout
- "Ready to search - ☕ Support" now properly positioned at bottom
- Results area expands to fill available space properly
- Removed max-height constraint for better space utilization

✅ TRANSCRIPT FLASH ELIMINATION:
- Implemented aggressive pre-hiding approach
- Transcript areas hidden BEFORE button click to prevent visual flash
- Enhanced CSS hiding with multiple techniques for complete invisibility
- Prevents page layout shifts during caption extraction
- Proper cleanup ensures styles removed after extraction

✅ TECHNICAL CHANGES:
- custom-ui.js: Toggle logic, logo integration, method fixes
- seekspeak.css: Enhanced flex layout for footer positioning  
- manifest.json: Added assets/icons/*.png to web_accessible_resources
- caption-fetcher.js: Ultimate transcript flash prevention system
- memory-bank/current-status.md: Comprehensive documentation update

🎯 USER EXPERIENCE:
- Professional SeekSpeak branding throughout interface
- Reliable button functionality with intuitive toggle behavior
- Zero visual disruption during caption extraction
- Better visual hierarchy with footer at bottom
- Polished, production-ready appearance

All user-reported issues resolved with comprehensive solutions!

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -71,7 +71,10 @@
   
   "web_accessible_resources": [
     {
-      "resources": ["content/seekspeak.css"],
+      "resources": [
+        "content/seekspeak.css",
+        "assets/icons/*.png"
+      ],
       "matches": ["https://www.youtube.com/*"]
     }
   ]
