Major UX improvements: search count, initialization fix, loading accuracy & caching preferences
✅ SEARCH RESULT COUNT:
- Added "Found X results for 'query'" in footer
- Shows "No results for 'query'" when no matches
- Resets to "Ready to search" when cleared
- Better user feedback for search results

🔧 INITIAL PAGE LOAD FIX:
- Changed manifest from document_idle to document_start for earlier injection
- Enhanced youtube-injector with multiple initialization strategies
- Added retry logic with 2s and 5s delays for YouTube SPA
- Better handling of yt-navigate-finish events
- Should eliminate need for page refresh on first use

⏱️ LOADING STATE ACCURACY:
- Button now uses same logic as popup (getCaptionStatus)
- Periodic checking every 1s during loading state
- Only shows "ready" when real captions available (>4 segments)
- Distinguishes between real captions vs fallback captions
- Matches green checkmark accuracy in extension popup

🎛️ ADVANCED CACHING PREFERENCES:
- New options page: chrome-extension://[id]/options/options.html
- Three caching modes: Always, Length-based, Never
- User can set minimum video length for caching (default 10 min)
- Storage management: view cached count and clear all cache
- Respects user preferences in caption-fetcher.js
- Memory caching still works even with storage disabled

🔧 TECHNICAL IMPROVEMENTS:
- Better YouTube player duration detection
- Cleanup intervals on navigation
- Enhanced error handling and logging
- Professional options page with YouTube-style design

🎯 USER EXPERIENCE:
- No more need to refresh pages for new users
- Accurate loading states that match popup
- Customizable caching for privacy-conscious users
- Clear feedback on search results count
- Professional settings interface

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,7 +32,7 @@
       "css": [
         "content/seekspeak.css"
       ],
-      "run_at": "document_idle",
+      "run_at": "document_start",
       "all_frames": false
     }
   ],
@@ -59,6 +59,8 @@
     "128": "assets/icons/icon128.png"
   },
   
+  "options_page": "options/options.html",
+
   "commands": {
     "open-search": {
       "suggested_key": {
