Fix critical keyboard shortcuts and initialization issues
KEYBOARD SHORTCUTS FIXED:
- Removed duplicate shortcut systems causing toggle conflicts
- Eliminated Chrome Commands API from manifest.json
- Unified keyboard handling in content script with proper state management
- Fixed custom shortcuts not working after settings changes
- Added input field exception for SeekSpeak search overlay
- Enhanced settings communication between options and content script

INITIALIZATION IMPROVEMENTS:
- Fixed extension context invalidation errors on fresh installs
- Added graceful error handling for chrome API calls
- Enhanced caption extraction timing to prevent empty results
- Replaced aggressive hiding with minimal opacity to allow content population
- Improved component loading verification and retry logic

CAPTION EXTRACTION ENHANCEMENTS:
- Fixed transcript extraction only getting 1 segment instead of hundreds
- Reduced hiding aggressiveness to allow YouTube content population
- Increased wait time for transcript content loading
- Better cleanup of style elements after extraction

These changes resolve the core blocking issues preventing production release

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,8 +6,9 @@
   
   "permissions": [
     "activeTab",
-    "storage",
-    "scripting"
+    "storage", 
+    "scripting",
+    "tabs"
   ],
   
   "host_permissions": [
@@ -32,7 +33,7 @@
       "css": [
         "content/seekspeak.css"
       ],
-      "run_at": "document_start",
+      "run_at": "document_idle",
       "all_frames": false
     }
   ],
@@ -61,16 +62,6 @@
   
   "options_page": "options/options.html",
 
-  "commands": {
-    "open-search": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "Command+Shift+F"
-      },
-      "description": "Open caption search"
-    }
-  },
-  
   "web_accessible_resources": [
     {
       "resources": [
