UI and search improvements and bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ TESTING.md
 CANVA_DESIGN_BRIEF.md
 ICON_PLACEHOLDER.md
 youtube_caption_search_design.md
+current-status.md
+memory-bank
 *.local.md
 
 # Temporary files
