feat: Major reliability overhaul for fresh installs and enhanced UI integration
- Enhanced Search Captions button styling to perfectly match YouTube's Subscribe button
- Implemented ChromeAPIHelper with robust retry mechanisms and exponential backoff
- Added comprehensive fresh install compatibility with graceful Chrome API handling
- Fixed "Extension context invalidated" errors with memory cache fallbacks
- Enhanced button state management with retry functionality and loading timeouts
- Improved component initialization timing with 20-second Chrome API stabilization
- Added conservative caching approach to handle unstable Chrome APIs during fresh installs
- Implemented auto-recovery system for button state when extension becomes ready
- Updated extension to work immediately on fresh installs without page refresh
- Enhanced error handling with clear user feedback and manual retry options
- Updated credits to "Made with ❤️ for YouTube by Dkmariolink"

This (SHOULD) resolves fresh install issues where the extension would require page refresh
and ensures reliable operation even when Chrome extension APIs are not immediately available.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,6 +33,7 @@
         "https://youtube.com/watch*"
       ],
       "js": [
+        "content/chrome-api-helper.js",
         "content/custom-ui.js",
         "content/caption-fetcher.js",
         "content/search-engine.js", 
